--- a/App/wwwroot/index.html
+++ b/App/wwwroot/index.html
@@ -10,19 +10,19 @@
 
 <body>
     <div id="app">
-        <h2>Hub API</h2>
+        <h2>JsClient</h2>
         <form v-on:submit.prevent="addMessage">
             <input type="text" v-model="newMessage" />
             <input type="submit" value="Send" />
         </form>
 
-        <h2>REST API</h2>
+        <h2>使用Rest</h2>
         <form v-on:submit.prevent="addRestMessage">
             <input type="text" v-model="newRestMessage" />
             <input type="submit" value="Send" />
         </form>
 
-        <h2>Stream API</h2>
+        <h2>串流</h2>
         <form v-on:submit.prevent="countDown">
             <input type="number" v-model="number" />
             <input type="submit" value="Send" />
@@ -36,12 +36,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@aspnet/signalr@1.0.0-rc1-update1/dist/browser/signalr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/msgpack5@4.0.2/dist/msgpack5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@aspnet/signalr-protocol-msgpack@1.0.2/dist/cjs/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@aspnet/signalr-protocol-msgpack@1.0.0-rc1-update1/dist/browser/signalr-protocol-msgpack.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>(async function() {
             const connection = new signalR.HubConnectionBuilder()
-                .withUrl("/app")
-                //.withHubProtocol(new signalR.protocols.msgpack.MessagePackHubProtocol())
+                .withUrl("/bcb")
+                .withHubProtocol(new signalR.protocols.msgpack.MessagePackHubProtocol())
                 .build();
             const app = new Vue({
                 el: "#app",
